# Imagio

./: .gitignore  .prettierignore  AUTO_TEST_README.md  BUILD_COMPLETE.md  CODE_QUALITY_REPORT.md  E2E_TEST_PLAN.md  FEATURES.md  FIXES_APPLIED.md  FIXES_PLAN.md  IMAGE_PREPROCESSING_REVIEW.md  LOGIC_ANALYSIS_REPORT.md  OPTIMIZATION_SUMMARY.md  PERSISTENT_IMAGES_NOTE.md  README.md  REFACTORING_GUIDE.md  SECURITY_CONFIG.md  SHORTCUTS_OPTIMIZATION.md  SIDEBAR_IMPLEMENTATION.md  SIDEBAR_QUICKSTART.md  TEST_GUIDE.md  build-fast.sh  copy-to-downloads.sh  eslint.config.js  index.html  package.json  pnpm-lock.yaml  test-image-text.txt  test-runner.js  test.html  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/: copilot-instructions.md
.test-screenshots/: test-report.json
docs/: PERFORMANCE_OPTIMIZATION.md
iconsbackup/newicon.icon/: icon.json
public/: config.local.json.example
scripts/: analyze-and-improve.sh  auto-test.sh  restart-app.sh
src/: App.css  App.tsx  App.tsx.backup  main.tsx
src-tauri/: Cargo.toml  ICON_SETUP.md  add-icon-name.sh  build-with-icon.sh  generate-icon.sh  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/resources/: Assets.car  Icon.icns
src-tauri/resources/Icon.icon/: icon.json
src-tauri/src/: lib.rs
src-tauri/src/binarization/: mod.rs
src-tauri/src/morphology/: mod.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/preprocessing/: adjustments.rs  filters.rs  geometric.rs  mod.rs
src-tauri/src/quality/: mod.rs
src/__tests__/hooks/: useErrorHandler.test.ts
src/__tests__/utils/: imageConversion.test.ts  memoization.test.ts
src/components/: ContextMenu.tsx  DropOverlay.tsx  EmptyState.css  EmptyState.tsx  ErrorBoundary.tsx  ErrorNotification.tsx  LoaderAnimation.css  LoaderAnimation.tsx  OverlaySidebar.tsx  ProcessingStatus.tsx  Select.css  Select.tsx  SettingsModal.tsx  Sidebar.css
src/components/sidebar/: SessionList.tsx  SettingsPanel.tsx  Sidebar.tsx
src/components/toolbar/: Toolbar.tsx
src/constants/: appConstants.ts
src/context/: AppContext.tsx  AutomationContext.tsx  SessionContext.tsx  index.ts
src/features/imageGeneration/: useImageGeneration.ts
src/features/imageGeneration/clients/: bltcyImageClient.ts  geminiImageClient.ts  imageGenClient.ts  index.ts  midjourneyClient.ts  seedreamImageClient.ts
src/features/imageGeneration/utils/: imageFormat.ts  index.ts
src/features/ocr/: types.ts  useOcrProcessing.ts
src/features/ocr/components/: AdvancedControls.tsx  OcrPreviewPanel.tsx  OcrTextPanel.tsx
src/features/ocr/containers/: OcrContainer.tsx
src/features/promptOptimization/: constants.ts  modelConfig.ts  types.ts  usePromptOptimization.ts
src/features/promptOptimization/components/: GeneratedImagePanel.tsx  OptimizedPromptPanel.tsx  PromptGenerationPanel.tsx  PromptSettingsPanel.tsx
src/features/promptOptimization/containers/: PromptContainer.tsx
src/features/settings/containers/: SettingsContainer.tsx
src/features/sidebar/containers/: SidebarContainer.tsx
src/hooks/: useApplicationConfig.ts  useAutoProcessing.ts  useAutomation.ts  useAutomationFlow.ts  useAutomationSettings.ts  useErrorHandler.ts  useKeyboardShortcuts.ts  useOcrWorkflow.ts  useSessionManagement.ts  useSessionManager.ts  useSessionStateSync.ts  useSessionStorage.ts
src/mocks/: index.ts  mock-plugin-dialog.ts  mock-tauri-api.ts
src/pages/: AutoTest.tsx
src/types/: appSession.ts  session.ts
src/utils/: bltcyImageClient.ts  environment.ts  fetchUtils.ts  imageConversion.ts  imageFormat.ts  imageGenClient.ts  llmClient.ts  logger.ts  memoization.ts  seedreamImageClient.ts  sessionUtils.ts  tauri-api.ts
tests/: e2e-automation.js
