[package]
name = "imagio"
version = "1.0.0"
description = "OCR application built with Tauri"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# Enable sccache for faster builds
[profile.dev]
incremental = true
# 为开发模式启用部分优化，以提高图像处理性能
# opt-level = 1: 轻量级优化，编译速度快，但性能提升明显
opt-level = 1

[profile.release]
incremental = true
# Release 模式全优化
opt-level = 3  # 使用 3 而不是 2，可以获得更好的性能
# 使用 thin LTO 而不是 full LTO，编译速度提升 2-3 倍，性能损失 < 5%
lto = "thin"
# 增加代码生成单元，加快编译速度（16 是默认值）
codegen-units = 16

# 可选：如果 opt-level=1 仍然太慢，可以尝试 opt-level=2
# 这会提供接近 release 的性能，但编译时间稍长
# 使用方法: CARGO_PROFILE_DEV_OPT_LEVEL=2 pnpm run tauri:dev
# 或者取消下面的注释:
# [profile.dev]
# opt-level = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
arboard = "3.6"
tesseract = "0.15"
dirs = "5.0"
image = { version = "0.25", features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
imageproc = "0.25"
